<resources>

    <string name="app_name">非聋神探社</string>
    <!--
<string name="one">安且吉兮</string>
<string name="two">生生忘</string>
<string name="three">主旋律</string>
<string name="four">夏天雨</string>
<string name="five">言之无物的歌</string>
<string name="six">雨云词</string>
<string name="seven">摇篮曲</string>
<string name="eight">寻常</string>
<string name="nine">不见你的夏天</string>
-->
    <!-- author -->
    <!--
    <string name="csl">君子亮</string>
    <string name="wl">汪啊锣</string>
    -->

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="puzzle_main_type">选择难度：</string>
    <string name="puzzle_main_steps">步数：</string>
    <string name="puzzle_main_img">原        图</string>
    <string name="puzzle_main_reset">重        置</string>
    <string name="puzzle_main_back">返        回</string>
    <string name="puzzle_main_time">时间：</string>
    <string name="puzzle_main_type_selected">2 X 2</string>
    <string name="puzzle_main_record">查看记录</string>
    <string name="puzzle_main_more">了解更多</string>




</resources>
