<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_puzzle_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="com.compassl.anji.flsts.activity.PuzzleMain">

    <LinearLayout
        android:id="@+id/ll_puzzle_main_spinner"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puzzle_main_steps"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:id="@+id/tv_puzzle_main_counts"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingEnd="50dip"
            android:text="1"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puzzle_main_time"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:id="@+id/tv_puzzle_main_time"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_puzzle_main_btns"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/padding">

        <Button
            android:id="@+id/btn_puzzle_main_img"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:background="@drawable/white_button"
            android:text="@string/puzzle_main_img"/>


        <Button
            android:id="@+id/btn_puzzle_main_restart"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:background="@drawable/white_button"
            android:text="@string/puzzle_main_reset"/>


        <Button
            android:id="@+id/btn_puzzle_main_back"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:background="@drawable/white_button"
            android:text="@string/puzzle_main_back"/>

    </LinearLayout>

    <GridView
        android:id="@+id/gv_puzzle_main_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_puzzle_main_btns"
        android:layout_below="@id/ll_puzzle_main_spinner"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/padding"/>

</RelativeLayout>